# 11_DinamicFigureCMake

./: 6_3.sln  CMakeLists.txt  README.md  WrongFigure.cpp  WrongFigure.h  WrongFigure2.cpp  WrongFigure2.h  equilateral_triangle.cpp  equilateral_triangle.h  figure.cpp  figure.h  isosceles_triangle.cpp  isosceles_triangle.h  main.cpp  parallelogram.cpp  parallelogram.h  quadrangle.cpp  quadrangle.h  quadrilateral.cpp  quadrilateral.h  rectangle.cpp  rectangle.h  rhombus.cpp  rhombus.h  right_triangle.cpp  right_triangle.h  square.cpp  square.h  triangle.cpp  triangle.h
